Add BaculaHandler class
It sends a config file to the Bacula director's configs.

--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,13 @@
 /log/*.log
 /tmp
 *.swp
+
+# Ignore config files
 config/database.yml
 config/beanstalk.yml
 config/secrets.yml
 config/bconsole.conf
+config/ssh.yml
 
 .ruby-version
 .rspec
