Introduced second database configuration for bacula tables

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 
 # Ignore config files
 config/database.yml
+config/database_bacula.yml
 config/secrets.yml
 config/bconsole.conf
 config/ssh.yml
