Only admins should receive the operator emails

--- a/config/mailer.yml.sample
+++ b/config/mailer.yml.sample
@@ -7,3 +7,4 @@ development:
   authentication: plain
   enable_starttls_auto: true
   default_sender: sender@archiving.grnet.gr
+  operator_email: admin_receiver@archiving.grnet.gr
