Add sentry-raven integration.
Ref T445

A valid sentry DSN must be set in secrets.

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -14,6 +14,7 @@ development:
   secret_key_base: something
   oauth2_vima_client_id: something
   oauth2_vima_secret: something
+  sentry_dsn: the_https_key_for_sentry
   salt: something
 
 test:
@@ -25,4 +26,5 @@ production:
   secret_key_base: something
   oauth2_vima_client_id: something
   oauth2_vima_secret: something
+  sentry_dsn: the_https_key_for_sentry
   salt: something
